update html to connect to css correctly

--- a/inv/public/index.html
+++ b/inv/public/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 
     <title>Inventory</title>
     <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -95,7 +95,7 @@
         What's the item?
         <input type="text" id="itemField" value="">
         <br> 
-        How much?
+        How many are there?
         <input type="number" id="countField" value="">
         <br>
         <input id="createBtn" type="submit" value="Submit">
