--- a/inv/public/index.html
+++ b/inv/public/index.html
@@ -7,82 +7,18 @@
     <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous">
     </script>
-    <!-- <script>
+    <script>
         $(document).ready(function () {
-                $("#cityField").keyup(function () {
-
-                    var cityurl = "/getcity?q=" + $("#cityField").val();
-                    console.log(cityurl);
-                    $.getJSON(cityurl, function (data) {
-                            console.log(data);
-                            var everything;
-                            everything = "<ul>";
-                            $.each(data, function (i, item) {
-                                everything += "<li> " + data[i].city + "</li>";
-                            });
-                            everything += "</ul>";
-                            $("#txtHint").html(everything);
-                        })
-                        .done(function () {
-                            console.log('getJSON request succeeded!');
-                        })
-                        .fail(function (jqXHR, textStatus, errorThrown) {
-                            console.log('getJSON request failed! ' + textStatus);
-                            console.log("incoming " + jqXHR.responseText);
-                        })
-                        .always(function () {
-                            console.log('getJSON request ended!');
-                        });
-                    $("#weatherButton").click(function (e) {
-                        var value = $("#cityField").val();
-                        console.log(value);
-                        e.preventDefault();
-                        $("#displayCity").text(value);
-                        var myurl =
-                            "https://api.wunderground.com/api/0153d321c4fa1c06/geolookup/conditions/q/UT/";
-                        myurl += value;
-                        myurl += ".json";
-                        console.log(myurl);
-                        $.ajax({
-                            url: myurl,
-                            dataType: "json",
-                            success: function (parsed_json) {
-                                console.log(parsed_json);
-                                var location = parsed_json['location']['city'];
-                                var temp_string = parsed_json['current_observation'][
-                                    'temperature_string'
-                                ];
-                                var current_weather = parsed_json['current_observation']
-                                    ['weather'];
-                                everything = "<ul>";
-                                everything += "<li>Location: " + location;
-                                everything += "<li>Temperature: " + temp_string;
-                                everything += "<li>Weather: " + current_weather;
-                                everything += "</ul>";
-                                $("#weather").html(everything);
-                            }
-                        });
-                    });
-                });
-                $("#wordfield").keyup(function () {
-                    console.log("this here");
-                    var url = "/getword?q=" + $("#wordfield").val();
-                    console.log(url);
-                    $.getJSON(url, function (data) {
-                        console.log(data);
-                        var everything;
-                        everything = "<ul>";
-                        $.each(data, function (i, item) {
-                            everything += "<li> " + data[i].defenition;
-                        });
-                        everything += "</ul>";
-                        $("#def").html(everything);
-                    });
+                $("#createBtn").click(function (e) {
+                    var item = $("#item").val();
+                    var quantity = $("#quantity").val();
+                    console.log(item);
+                    console.log(quantity);
+                    e.preventDefault();
                 });
             }
-
         );
-    </script> -->
+    </script>
 
 </head>
 
@@ -93,10 +29,9 @@
     </div>
     <form>
         What's the item?
-        <input type="text" id="itemField" value="">
-        <br> 
-        How many are there?
-        <input type="number" id="countField" value="">
+        <input type="text" id="item" value="">
+        <br> How many are there?
+        <input type="number" id="quantity" value="">
         <br>
         <input id="createBtn" type="submit" value="Submit">
     </form>
